# slam-cartographer-and-rtabmap

./: .gitmodules  README.md
cartographer_ws/src/cartographer/: .gitignore  CMakeLists.txt  README.rst  package.xml
cartographer_ws/src/cartographer/cartographer/common/: configuration_file_resolver.cc  time.h
cartographer_ws/src/cartographer/cartographer/ground_truth/: autogenerate_ground_truth.cc
cartographer_ws/src/cartographer/cartographer/io/: coloring_points_processor.cc  pcd_writing_points_processor.cc  proto_stream_deserializer.cc  serialization_format_migration.cc  serialization_format_migration.h  serialization_format_migration_test.cc  submap_painter.cc
cartographer_ws/src/cartographer/cartographer/mapping/: constraint.cc  constraint.h  map_builder.cc  map_builder.h  map_builder_interface.cc  map_builder_interface.h  pose_graph.cc  pose_graph.h  pose_graph_interface.h  pose_graph_test.cc  trajectory_builder_interface.cc  trajectory_node.cc  trajectory_node.h  trajectory_state.h
cartographer_ws/src/cartographer/cartographer/metrics/: register.cc
cartographer_ws/src/cartographer/configuration_files/: map_builder.lua  pose_graph.lua  trajectory_builder.lua  trajectory_builder_3d.lua
cartographer_ws/src/cartographer_example/: CMakeLists.txt  README.md  package.xml
cartographer_ws/src/cartographer_example/config/: config_3d.lua  husky_localization.lua  husky_mapping.lua  husky_mapping_offline_indoor.lua  husky_mapping_offline_outdoor.lua  husky_odometry.lua  pcd_writer.lua  skoltech.lua
cartographer_ws/src/cartographer_example/launch/: cartographer.launch  cartographer_offline.launch  pcd_writer.launch
cartographer_ws/src/cartographer_example/manual_build/: voxel_filter.cpp
cartographer_ws/src/cartographer_example/rviz/: cartographer.rviz  sweeper.rviz
cartographer_ws/src/cartographer_example/scripts/: auto_occupancy_grid_extraction.py  cartographer.py  run_cartographer.py
cartographer_ws/src/cartographer_ros/: .gitignore
cartographer_ws/src/cartographer_ros/cartographer_ros/: CMakeLists.txt  package.xml
cartographer_ws/src/cartographer_ros/cartographer_ros_msgs/: CMakeLists.txt
cartographer_ws/src/cartographer_ros/docker/: BUILD_INSIDE_DOCKER.md  Dockerfile  build.sh  context.sh  into.sh  start.sh
cartographer_ws/src/kas_utils/cpp/: CMakeLists.txt  package.xml
cartographer_ws/src/kas_utils/cpp/include/kas_utils/: collection.hpp  depth_to_point_cloud.h  stamped_collection.hpp  utils.h
cartographer_ws/src/kas_utils/cpp/src/: stamped_collection_test.cc  time_measurer.cc
cartographer_ws/src/slam_communication_msgs/: package.xml
cartographer_ws/src/slam_communication_msgs/msg/: NodesToRemove.msg  OptimizationResults.msg  Trajectory.msg
docker_helper/: .gitignore  setup.py
docker_helper/src/docker_helper/: __init__.py  docker_helper.py  ros_docker_helper.py
rtabmap_ws/src/colored_occupancy_grid/colored_occupancy_grid_msgs/: CMakeLists.txt  package.xml
rtabmap_ws/src/colored_occupancy_grid/colored_occupancy_grid_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
rtabmap_ws/src/kas_utils/cpp/: README.md  kas_utils_cpp-config.cmake.in
rtabmap_ws/src/kas_utils/cpp/src/: collection_test.cc  (+2 more)
rtabmap_ws/src/kas_utils/python/: CMakeLists.txt  package.xml  setup.py
rtabmap_ws/src/kas_utils/python/src/kas_utils/: _depth_to_point_cloud_python_implementation.py  annotate_images.py  collection.py  depth_to_point_cloud.py  plot_logs.py  slam.py  time_measurer.py  utils.py
rtabmap_ws/src/rtabmap/: .cproject  .project  CMakeLists.txt  package.xml
rtabmap_ws/src/rtabmap/cmake_modules/: FindG2O.cmake  FindHIDAPI.cmake  MacOSXBundleInfo.plist.in
rtabmap_ws/src/rtabmap/corelib/src/: CMakeLists.txt  CameraModel.cpp  Color.cpp  Compression.cpp  ConvertUTF.h  DoorTracking.cpp  GeodeticCoords.cpp  IMU.cpp  LaserScan.cpp  LocalMap.cpp  LocalMapBuilder.cpp  MapLimits.cpp  Node.cpp  ObjectTracking.cpp  ObstacleDilation.cpp  OccupancyGridBuilder.cpp  OccupancyGridMap.cpp  PDALWriter.cpp  RayTracing.cpp  SemanticDilation.cpp  SensorData.cpp  Serialization.cpp  SimpleIni.h  StereoCameraModel.cpp  TemporaryOccupancyGridBuilder.cpp  Time.cpp  TimedOccupancyGridMap.cpp  TrajectoriesTrimmer.cpp  Trajectory.cpp  Transform.cpp  ocp_map_to_image.cpp  util3d.cpp  util3d_transforms.cpp
rtabmap_ws/src/rtabmap/corelib/src/icp/: cccorelib.h  libpointmatcher.h
rtabmap_ws/src/rtabmap/corelib/src/python/: PyDetector.cpp  PyDetector.h  PyMatcher.cpp  PyMatcher.h  PythonInterface.cpp
rtabmap_ws/src/rtabmap/corelib/src/resources/: DatabaseSchema.sql.in
rtabmap_ws/src/rtabmap/corelib/src/resources/backward_compatibility/: DatabaseSchema_0_16_0.sql  DatabaseSchema_0_16_1.sql  DatabaseSchema_0_16_2.sql  DatabaseSchema_0_17_0.sql  DatabaseSchema_0_18_0.sql  DatabaseSchema_0_18_3.sql
rtabmap_ws/src/rtabmap/corelib/src/rtabmap/proto/: CMakeLists.txt  Color.proto  LaserScan.proto  LocalMap.proto  MapLimits.proto  OccupancyGridMap.proto  RawData.proto  SensorData.proto  Time.proto  Trajectory.proto  Transform.proto
rtabmap_ws/src/rtabmap/corelib/src/superpoint_torch/: SuperPoint.cc
rtabmap_ws/src/rtabmap/tools/: CMakeLists.txt
rtabmap_ws/src/rtabmap_example/: README.md
rtabmap_ws/src/rtabmap_example/config/: husky.yaml  husky_enable_local_mapping.yaml  tracking_article_config.yaml
rtabmap_ws/src/rtabmap_example/launch/: occupancy_grid_map.launch  tracking_article_launch.launch
rtabmap_ws/src/rtabmap_example/rviz/: occupancy.rviz
rtabmap_ws/src/rtabmap_example/scripts/: rtabmap.py  run_rtabmap.py
rtabmap_ws/src/rtabmap_ros/: README.md
rtabmap_ws/src/rtabmap_ros/docker/: Dockerfile  build.sh  start.sh
rtabmap_ws/src/rtabmap_ros/rtabmap_ros/: CMakeLists.txt  package.xml  rviz_plugins.xml
rtabmap_ws/src/rtabmap_ros/rtabmap_ros_msgs/: CMakeLists.txt  package.xml
rtabmap_ws/src/rtabmap_ros/rtabmap_ros_msgs/msg/: DoorCorners.msg  RGBDImages.msg
rtabmap_ws/src/rtabmap_ros/rtabmap_ros_msgs/srv/: GetPlan.srv
rtabmap_ws/src/slam_communication_msgs/: CMakeLists.txt
subprocess-tee/: setup.cfg
subprocess-tee/src/subprocess_tee/: __init__.py
(+371 files in other folders)
