[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
; install_requires =

[options.extras_require]
test =
    enrich>=1.2.6
    mock>=4.0.3
    molecule>=3.4.0  # ansible is needed but no direct imports are made
    pytest-cov>=2.12.1
    pytest-plus>=0.2
    pytest-xdist>=2.3.0
    pytest>=6.2.5

[options.packages.find]
where = src

[options.package_data]
subprocess_tee =
    *.typed
    *.pyi

[tool:pytest]
addopts = --doctest-modules --durations 10 --durations-min=3 --color=yes
doctest_optionflags = ALLOW_UNICODE ELLIPSIS
norecursedirs = dist doc build .tox .eggs
testpaths = src
filterwarnings =
    # treat warnings as errors unless we add them below
    error
    # ignore::UserWarning

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203,D
# 88 is official black default:
max-line-length = 88
