<?xml version="1.0"?>
<package format="2">
  <name>kas_utils_cpp</name>
  <version>0.0.1</version>
  <description>The kas_utils_cpp package</description>

  <maintainer email="cds-jetson-host@todo.todo">cds-jetson-host</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
