<?xml version="1.0"?>
<package format="2">
  <name>kas_utils</name>
  <version>0.0.1</version>
  <description>The kas_utils package</description>

  <maintainer email="cds-jetson-host@todo.todo">cds-jetson-host</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>kas_utils_cpp</depend>
</package>
